--- a/src/makefile
+++ b/src/makefile
@@ -12,7 +12,8 @@ SIGNUP=echo "Zeo ver."$(VERSION)" Copyright (C) 2005 Tomomichi Sugihara (Zhidao)
 
 OBJ=zeo_color.o zeo_optic.o\
 	zeo_misc.o\
-	zeo_vec2d.o zeo_mat2d.o\
+	zeo_vec2d.o zeo_mat2d.o zeo_tri2d.o\
+	zeo_texture.o\
 	zeo_vec3d.o zeo_vec6d.o zeo_mat3d.o zeo_mat6d.o\
 	zeo_vec3d_list.o zeo_vec3d_tree.o zeo_vec3d_pca.o\
 	zeo_ep.o zeo_frame.o\
