Modified specifications of zPH3DInertia and zPH3DBaryInertia, and added zPH3DInertiaMass. Modified specification of zTri3DConeInertia to specify density. Renamed _inertia of zShape3DCom to _inertia_d, and added _inertia_m to zShape3DCom. Modified specification of z*3DInertia to specify density, and added z*3DInertiaMass. Added a rule to compile objects independently in makefile. Modified comments of z*3DVolume and z*3DInertia.

--- a/src/makefile
+++ b/src/makefile
@@ -2,5 +2,7 @@ MAKEFILEGEN=`which zeda-makefile-gen`
 
 all:
 	@$(MAKEFILEGEN) lib | make -f -
+%.o: %.c
+	@$(MAKEFILEGEN) lib | make -f - $@
 clean:
 	@$(MAKEFILEGEN) lib | make -f - clean
