--- a/example/makefile
+++ b/example/makefile
@@ -8,4 +8,4 @@ CFLAGS=-ansi -Wall -O3 $(LIB) $(INCLUDE) -funroll-loops
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $< $(LINK)
 clean :
-	rm -f *.o *~ core *test *.ztk ?
+	-@rm -f *.o *~ core *test *.ztk ?
