Added zVec3DToZTK and zMat3DToZTK. Added zRGBToZTK and zOpticalInfoToZTK. Modified _zOpticalInfoAmbFPrintZTK, _zOpticalInfoDifFPrintZTK, _zOpticalInfoSpcFPrintZTK, _zOpticalInfoESRFPrintZTK, _zOpticalInfoSnsFPrintZTK, and _zOpticalInfoAlphaFPrintZTK to return false if the corresponding value is default. Added ZRGB_TOL and zRGBIsZero.

--- a/example/makefile
+++ b/example/makefile
@@ -1,9 +1,8 @@
-INCLUDE=`zeo-config -I`
-LIB=`zeo-config -L`
+CFLAGS=`zeo-config --cflags`
 LINK=`zeo-config -l`
 
 CC=gcc
-CFLAGS=-ansi -Wall -O3 $(LIB) $(INCLUDE) -funroll-loops
+CFLAGS+=-ansi -Wall -O3 -funroll-loops
 
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $< $(LINK)
