Modified makefile for examples.

--- a/test/makefile
+++ b/test/makefile
@@ -1,9 +1,11 @@
-INCLUDE=`zeo-config -I`
-LIB=`zeo-config -L`
+#INCLUDE=`zeo-config -I`
+#LIB=`zeo-config -L`
 LINK=`zeo-config -l`
+CFLAGS=`zeo-config --cflags`
 
 CC=gcc
-CFLAGS=-ansi -Wall -O3 $(LIB) $(INCLUDE) -funroll-loops
+#CFLAGS=-ansi -Wall -O3 $(LIB) $(INCLUDE) -funroll-loops
+CFLAGS+=-ansi -Wall -O3 -funroll-loops
 
 %: %.c
 	@$(CC) $(CFLAGS) -o $@ $< $(LINK)
