--- a/example/makefile
+++ b/example/makefile
@@ -1,8 +1,10 @@
 CFLAGS=`zeo-config --cflags`
 LINK=`zeo-config -l`
 
+TARGET=$(shell ls *.c | xargs -i basename {} .c | tr -s "\n" " ")
+
 CC=gcc
-CFLAGS+=-ansi -Wall -O3 -funroll-loops
+CFLAGS+=-ansi -Wall -O3 -funroll-loops -std=c99 -g
 
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $< $(LINK)
