Renamed _zGJKPDInitAddPoint to _zGJKPDAddPoint. Renamed _zBoundingBall3DPL to _zBoundingBall3D. Renamed zVec6DDataFPrint, zVec6DDataPrint, zVec6DDataNLFPrint, and zVec6DDataNLPrint to zVec6DValueFPrint, zVec6DValuePrint, zVec6DValueNLFPrint, and zVec6DValueNLPrint, respectively. Reflect new specifications of zVec2DDataAABB, zVec3DDataAABB, zVec3DDataOBB, zVec3DDataBoundingBox, zVec3DDataConvexHull, zVec3DDataConvexHull2D, zGJK, and zMPR. Modified zeo_qhull to use zVec3DDataConvexHull. Modified zeo_gjk to reflect new specification of zGJK. Modified zMShape3DBoundingBall to use zVec3DDataBoundingBall. Abolished zMShape3DVertList, and added zMShape3DVertData. Modified _zIntersectPH3D to conform to new specification of zGJKDepth and zVec3DDataConvexHull. Modified specifications of _zMPRSupportMap, _zMPROrigin, _zMPRFindPortal, _zMPRRefinePortal, _zMPRDepth, zMPR, and zMPRDepth to use zVec3DData. Modified specifications of _zGJKSupportMap, _zGJKPDInitAddPoint, _zGJKPDInit, _zGJKPD, _zGJK, zGJK, zGJKDepth, _zGJKPointSupportMap, and zGJKPoint to use zVec3DData. Abolished zGJKPL. Abolished zPH3DMinkowskiSub, and added zVec3DDataMinkowskiSub. Abolished zDelaunayTriangulate2D and zVoronoiDiagram2D, and added zVec2DDataDelaunayTriangulate and zVec2DDataVoronoiDiagram. Modified specifications of _zDelaunay2DCreateOuter and _zVoronoi2DListInit to use zVec2DData. Abolished zBoundingBall3D and zBoundingBall3DPL, and added zVec3DDataBoundingBall. Abolished zBoundingDisk2D and zBoundingDisk2DPL, and added zVec2DDataBoundingDisk. Renamed _zBoundingDisk2DPL to _zBoundingDisk2D. Abolished zOBB3D and zOBB3DPL, and added zVec3DDataOBB. Abolished zConvexHull3DPL and zConvexHull3D, and added zVec3DDataConvexHull. Abolished zConvexHull2D, zConvexHull2DPL, zConvexHull2D2PH3D, and zConvexHull2DPL2PH3D, and added zVec3DDataConvexHull2D and zVec3DDataConvexHull2DPH3D. Added ZEO_VECXD_DATA_TO_ADDRLIST. Added zAABox3DCopy, zAABox3DMerge, and zAABox2DArea. Reimplemented classes and methods for zVe

--- a/example/makefile
+++ b/example/makefile
@@ -6,6 +6,7 @@ TARGET=$(shell ls *.c | xargs -i basename {} .c | tr -s "\n" " ")
 CC=gcc
 CFLAGS+=-ansi -Wall -O3 -funroll-loops -g
 
+all: $(TARGET)
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $< $(LINK)
 clean :
