--- a/example/makefile
+++ b/example/makefile
@@ -1,13 +1,17 @@
-CFLAGS=`zeo-config --cflags`
+CC=gcc
+CFLAGS=-ansi -Wall -O3 -funroll-loops -g `zeo-config --cflags`
 LINK=`zeo-config -l`
 
-TARGET=$(shell ls *.c | xargs -i basename {} .c | tr -s "\n" " ")
+CXX=g++
+CXXFLAGS=-std=c++17 -Wall -O3 -funroll-loops -g `zeo-config --cflags`
+LINKCXX=`zeo-config -lcpp`
 
-CC=gcc
-CFLAGS+=-ansi -Wall -O3 -funroll-loops -g
+TARGET=$(shell ls *.c | xargs -i basename {} .c | tr -s "\n" " ") $(shell ls *.cpp | xargs -i basename {} .cpp | tr -s "\n" " ")
 
 all: $(TARGET)
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $< $(LINK)
+%: %.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $< $(LINKCXX)
 clean :
 	-@rm -f *.o *~ core *test *.ztk ?
