Redefined the operator == for zVec2D, zVec3D, zVec6D, and zMat3D for C++. Renamed createZYX, createZYZ, and createAA methods of zMat3D to createFromZYX, createFromZYZ, and createFromAA, respectively. Modified specification of inv method of zMat3D for C++. Added transposeDirect method to zMat3D for C++. Modified specification of the method transpose of zMat3D for C++. Added const qualifiers to arguments of methods of zVec2D, zVec3D, zVec6D, and zMat3D for C++. Modified test/makefile to compile C++ programs. Modified ZEO_VECXD_DATA_DEF_STRUCT to define C++ methods of zVecXDData. Debugged zVecXDData*Fetch. enamed ZEO_VECXD_DATA_DEF_STATIC_METHOD to _ZEO_VECXD_DATA_DEF_STATIC_METHOD, and redefined ZEO_VECXD_DATA_DEF_STATIC_METHOD to define constructor and destructor for C++. Added _zVecXDDataArrayDirectSize and _zVecXDDataArrayDirectIsEmpty. Abolished _zVecXDDataArrayPtrAdd, and assign _zVecXDDataDummyAdd instead. Modified specifications of _zVecXDDataArraySize and _zVecXDDataArrayIsEmpty to see the currently occupied size of the array. Added member capacity of zVecXDDataMethod, and defined zVecXDDataCapacity, _zVecXDDataDummyCapacity, _zVecXDDataArrayCapacity, _zVecXDDataListCapacity, _zVecXDDataAddrListCapacity, _zVecXDDataArrayPtrCapacity, _zVecXDDataListPtrCapacity, and _zVecXDDataAddrListPtrCapacity.

--- a/test/makefile
+++ b/test/makefile
@@ -1,13 +1,16 @@
-#INCLUDE=`zeo-config -I`
-#LIB=`zeo-config -L`
+ZEO_CFLAGS=`zeo-config --cflags`
 LINK=`zeo-config -l`
-CFLAGS=`zeo-config --cflags`
+LINKCXX=`zeo-config -lcpp`
 
 CC=gcc
-#CFLAGS=-ansi -Wall -O3 $(LIB) $(INCLUDE) -funroll-loops
-CFLAGS+=-ansi -Wall -O3 -funroll-loops
+CFLAGS=-ansi -Wall -O3 -funroll-loops ${ZEO_CFLAGS}
+
+CXX=g++
+CXXFLAGS=-std=c++17 -Wall -O3 -funroll-loops ${ZEO_CFLAGS}
 
 %: %.c
 	@$(CC) $(CFLAGS) -o $@ $< $(LINK)
+%: %.cpp
+	@$(CXX) $(CXXFLAGS) -o $@ $< $(LINKCXX)
 clean :
 	-@rm -f *.o *~ core *test
